--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Student Portfolio Application - Showcase your skills and projects"
+    />
+    <meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self'; 
+               script-src 'self' https://apis.google.com https://*.firebaseio.com https://*.googleapis.com; 
+               style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
+               font-src 'self' https://fonts.gstatic.com; 
+               img-src 'self' data: https://*.googleusercontent.com https://*.googleapis.com https://firebasestorage.googleapis.com; 
+               connect-src 'self' https://*.firebaseio.com https://*.googleapis.com https://firebasestorage.googleapis.com;
+               frame-src 'self' https://*.firebaseapp.com;" 
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,11 +33,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Student Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="portal-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
